Fixed bootstrap collapsed navbar issue

--- a/site2.css
+++ b/site2.css
@@ -31,7 +31,7 @@
 }
 .formDiv
 {
-    width:auto;
+    width:40%;
     border:solid 1px black;
     float:left;
     padding:2px;
@@ -41,7 +41,7 @@
 }
 .dateBox
 {
-    width:25%;
+    width:30%;
 }
 .textBox
 {
